@@ -27,8 +27,10 @@ class FeedsDataProcessor extends FeedsProcessor {
         // Map item to a data record, feed_nid and timestamp are mandatory.
         $data = array();
         $data['feed_nid'] = $source->feed_nid;
-        $data['timestamp'] = FEEDS_REQUEST_TIME;
         $data = $this->map($item, $data);
+        if (!isset($data['timestamp'])) {
+          $data['timestamp'] = FEEDS_REQUEST_TIME;
+        }
 
         // Only save if this item is not expired.
         if ($expiry_time != FEEDS_EXPIRE_NEVER && $data['timestamp'] < (FEEDS_REQUEST_TIME - $expiry_time)) {
